// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation snapshot, no user 1`] = `
<nav
  className="navbar"
>
  <div
    className="logo"
    onClick={[Function]}
    style={
      Object {
        "fontSize": "1.75em",
      }
    }
  >
    L
  </div>
  <button
    onClick={[Function]}
    type="button"
  >
    Log in or sign up
  </button>
</nav>
`;

exports[`Navigation snapshot, user 1`] = `
<nav
  className="navbar"
>
  <div
    className="logo"
    onClick={[Function]}
    style={
      Object {
        "fontSize": "1.75em",
      }
    }
  >
    L
  </div>
  <span
    className="user-nav-widget"
  >
    <span>
      mark
    </span>
    <img
      alt="mark"
      className="img-circle"
      src="url"
      width={40}
    />
    <span
      onClick={[Function]}
    >
      <i
        className="fa fa-sign-out"
      />
    </span>
  </span>
</nav>
`;
